@@ -6,13 +6,15 @@
 
         New features
 
+        - 'automate identify', an automate version of 'mtn identify'.
+
         Other
 
         Internal
 
         - Update the internal Lua to version 5.1.2.
 
-	- Added build files for Mac OS X.
+        - Added build files for Mac OS X.
 
         - Update the internal SQLite to version 3.3.16.
 
